feat: allow concurrent weaver runtimes and parallelize the test suite
Squashed commits:
- [5331f05] Allow multiple unpublished weaver runtimes per JVM (RFC-016.D1)
- [fb6f9f6] Move spool state into runtime-owned storage (RFC-016.D2)
- [9df2965] Run parallel-safe test namespaces concurrently (RFC-016.D3 mechanics)
- [4cedd76] Broaden the parallel test island and fix the hazards it exposed (RFC-016.D3)
- [b78627a] Shard the add-libs island across concurrent subprocess JVMs (RFC-016 NG3 amended)
- [5262250] Add skein.userland.alpha terse ergonomics tier and shared-spool guidance